# apple-music-audio-capture

./: .gitignore  ANGET.md  API101_DEVELOPMENT_RULES.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  appledecryptor.cpp
app/src/main/kotlin/com/neurax08/xposed/appledecryptor/: AppleDecryptorModule.kt  AppleMusicHookCore.kt  AppleMusicNativeBridge.kt  MainActivity.kt
app/src/main/kotlin/com/neurax08/xposed/appledecryptor/download/: AlacFrameExtractor.kt  AlacPcmDecoder.kt  DownloadDatabase.kt  DownloadManager.kt  DownloadSettings.kt  Fmp4SampleSplitter.kt  HlsDownloader.kt  HostDownloadCommandReceiver.kt  IsoBmffAlacWriter.kt  M4aWriter.kt  NotificationController.kt  OutputPaths.kt  QueueContentProvider.kt  QueueSyncReceiver.kt  SharedQueueStore.kt
app/src/main/kotlin/com/neurax08/xposed/appledecryptor/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/kotlin/com/neurax08/xposed/appledecryptor/: AppleMusicHookCoreTest.kt
docs/superpowers/plans/: 2026-07-18-alac-codec-improvements.md
docs/superpowers/specs/: 2026-06-02-frida-difference-migration-design.md  2026-07-18-internal-decrypt-download-design.md
gradle/: libs.versions.toml
original/: agent-arm64.js
